--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </li>
         </ul>
         <h1 class="header_1">Effective Solutions for Your Business</h1>
-        <button class="header_button">Order Service</button>
+        <button class="header_button" type="button">Order Service</button>
     </header>
 
     <main class="main">
