--- a/index.html
+++ b/index.html
@@ -36,71 +36,71 @@
             </ul>
         </address>
     </header>
-    <main class="main"></main>
-    <section class="main_visit">
-        <h1 class="main_visit_header">Effective Solutions for Your Business</h1>
-        <button class="main_visit_button" type="button">Order Service</button>
-    </section>
+    <main class="main">
+        <section class="main_visit">
+            <h1 class="main_visit_header">Effective Solutions for Your Business</h1>
+            <button class="main_visit_button" type="button">Order Service</button>
+        </section>
 
 
-    <section class="inform">
-        <ul class="inform_list">
-            <li class="inform_item">
-                <h3 class="inform_header">Strategy</h3>
-                <p class="inform_text">
-                    Our goal is to identify the business problem to walk away with the perfect and creative
-                    solution.
-                </p>
-            </li>
-            <li class="inform_item">
-                <h3 class="inform_header">Punctuality</h3>
-                <p class="inform_text">
-                    Bring the key message to the brand's audience for the best price within the shortest possible
-                    time.
-                </p>
-            </li>
-            <li class="inform_item">
-                <h3 class="inform_header">Diligence</h3>
-                <p class="inform_text">
-                    Research and confirm brands that present the strongest digital growth opportunities and minimize
-                    risk.
-                </p>
-            </li>
-            <li class="inform_item">
-                <h3 class="inform_header">Technologies</h3>
-                <p class="inform_text">
-                    Design practice focused on digital experiences. We bring forth a deep passion for
-                    problem-solving.
-                </p>
-            </li>
-        </ul>
-    </section>
-    <section class="team">
-        <h2 class="team_header">Our Team</h2>
-        <ul class="team_list">
-            <li class="team_item">
-                <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260" class="team_img">
-                <h3 class="team_item_header">Mark Guerrero</h3>
-                <p class="team_text">Product Designer</p>
-            </li>
-            <li class="team_item">
-                <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260" class="team_img">
-                <h3 class="team_item_header">Tom Ford</h3>
-                <p class="team_text">Frontend Developer</p>
-            </li>
-            <li class="team_item">
-                <img src="./images/camila.jpg" alt="Camila Garcia" width="264" height="260" class="team_img">
-                <h3 class="team_item_header">Camila Garcia</h3>
-                <p class="team_text">Marketing</p>
-            </li>
-            <li class="team_item">
-                <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260" class="team_img">
-                <h3 class="team_item_header">Daniel Wilson</h3>
-                <p class="team_text">UI Designer</p>
-            </li>
-        </ul>
+        <section class="inform">
+            <ul class="inform_list">
+                <li class="inform_item">
+                    <h3 class="inform_header">Strategy</h3>
+                    <p class="inform_text">
+                        Our goal is to identify the business problem to walk away with the perfect and creative
+                        solution.
+                    </p>
+                </li>
+                <li class="inform_item">
+                    <h3 class="inform_header">Punctuality</h3>
+                    <p class="inform_text">
+                        Bring the key message to the brand's audience for the best price within the shortest possible
+                        time.
+                    </p>
+                </li>
+                <li class="inform_item">
+                    <h3 class="inform_header">Diligence</h3>
+                    <p class="inform_text">
+                        Research and confirm brands that present the strongest digital growth opportunities and minimize
+                        risk.
+                    </p>
+                </li>
+                <li class="inform_item">
+                    <h3 class="inform_header">Technologies</h3>
+                    <p class="inform_text">
+                        Design practice focused on digital experiences. We bring forth a deep passion for
+                        problem-solving.
+                    </p>
+                </li>
+            </ul>
+        </section>
+        <section class="team">
+            <h2 class="team_header">Our Team</h2>
+            <ul class="team_list">
+                <li class="team_item">
+                    <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260" class="team_img">
+                    <h3 class="team_item_header">Mark Guerrero</h3>
+                    <p class="team_text">Product Designer</p>
+                </li>
+                <li class="team_item">
+                    <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260" class="team_img">
+                    <h3 class="team_item_header">Tom Ford</h3>
+                    <p class="team_text">Frontend Developer</p>
+                </li>
+                <li class="team_item">
+                    <img src="./images/camila.jpg" alt="Camila Garcia" width="264" height="260" class="team_img">
+                    <h3 class="team_item_header">Camila Garcia</h3>
+                    <p class="team_text">Marketing</p>
+                </li>
+                <li class="team_item">
+                    <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260" class="team_img">
+                    <h3 class="team_item_header">Daniel Wilson</h3>
+                    <p class="team_text">UI Designer</p>
+                </li>
+            </ul>
 
-    </section>
+        </section>
     </main>
 
     <footer class="footer">
