--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header class="header">
         <nav class="header_nav">
-            <a class="web_studio" href="/" target="_blank">>WEBSTUDIO</a>
+            <a class="web_studio" href="/" target="_blank">WEBSTUDIO</a>
             <ul class="header_list">
                 <li class="header_item">
                     <a href="">Studio</a>
@@ -44,6 +44,7 @@
 
 
         <section class="inform">
+            <h2></h2>
             <ul class="inform_list">
                 <li class="inform_item">
                     <h3 class="inform_header">Strategy</h3>
@@ -104,17 +105,11 @@
     </main>
 
     <footer class="footer">
-        <ul class="footer_list">
-            <li class="footer_item">
-                <a class="web_studio" href="/" target="_blank">WEBSTUDIO</a>
-            </li>
-            <li class="footer_item">
-                <p class="footer_text">
-                    Increase the flow of customers and sales for your business with digital marketing & growth
-                    solutions.
-                </p>
-            </li>
-        </ul>
+        <a class="web_studio" href="./index.html" target="_blank">WEBSTUDIO</a>
+        <p class="footer_text">
+            Increase the flow of customers and sales for your business with digital marketing & growth
+            solutions.
+        </p>
     </footer>
 
 </body>
