--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header class="header">
         <nav class="header_nav">
-            <a class="web_studio" href="/" target="_blank">WebStudio</a>
+            <a class="web_studio" href="/">WebStudio</a>
             <ul class="header_list">
                 <li class="header_item">
                     <a href="">Studio</a>
@@ -42,9 +42,8 @@
             <button class="main_visit_button" type="button">Order Service</button>
         </section>
 
-
         <section class="inform">
-            <h2>" "</h2>
+            <h2 hidden="true">Rzopa horyt...</h2>
             <ul class="inform_list">
                 <li class="inform_item">
                     <h3 class="inform_header">Strategy</h3>
@@ -105,7 +104,7 @@
     </main>
 
     <footer class="footer">
-        <a class="web_studio" href="./index.html" target="_blank">WebStudio</a>
+        <a class="web_studio" href="./index.html">WebStudio</a>
         <p class="footer_text">
             Increase the flow of customers and sales for your business with digital marketing & growth
             solutions.
