--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </section>
 
         <section class="inform">
-            <h2 hidden="true">Rzopa horyt...</h2>
+            <h2 hidden="">Rzopa horyt...</h2>
             <ul class="inform_list">
                 <li class="inform_item">
                     <h3 class="inform_header">Strategy</h3>
